泰中招(2025纪念站).html

--- a/泰中招(2025纪念站).html
+++ b/泰中招(2025纪念站).html
@@ -1,60 +1,60 @@
-<!DOCTYPE html>
+<!文档类型html >
 
-<html lang="zh">
+<超文本标记语言 语言=" zh ">
 
-<head>
+<头>
 
-    <meta charset="utf-8">
+    <自指的 字符集=" utf-8 ">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <自指的 名字="视窗" 内容=宽度=设备宽度，初始比例=1.0>
 
-    <title>泰中招(2025纪念站)</title>
+    <标题>泰中招(2025纪念站)</标题>
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <环 能量损耗率="快捷图标" href=" favicon.ico ">
 
-    <style>
+    <风格>
 
-        body {
+        身体 {
 
-            margin: 0;
+            边缘: 0;
 
-            padding: 0;
+            填料: 0;
 
-            background-color: #f0f0f0; /* 替换背景图片为纯色 */
+            背景颜色:# f0f0f0/* 替换背景图片为纯色 */
 
-            background-repeat: no-repeat;
+背景-重复:不重复；
 
-            background-size: cover;
+背景-尺寸:封面；
 
-            background-position: center;
+背景-位置:中心；
 
-            background-attachment: fixed;
-
-        }
-
-        a {
-
-            font-size: 20px;
+背景-附件:固定；
 
         }
 
-        .topdiv {
+一个{
 
-            text-align: center;
-
-            height: 20vh;
-
-            display: flex;
-
-            justify-content: center;
-
-            align-items: center;
+字体大小:20px
 
         }
 
-        .container {
+我不知道.太棒了
 
-            height: 80vh;
+文本对齐:居中；
+
+身高:20vh
+
+显示器:flex
+
+justify-content:居中；
+
+对齐-项目:居中；
+
+        }
+
+。容器{
+
+身高:80vh
 
             text-align: center;
 
@@ -72,39 +72,39 @@
 
         }
 
-        @media only screen and (max-width: 768px) {
+@媒体专用屏幕和(最大宽度:768像素){
 
-            body {
+正文{
 
-                padding: 0px 30px;
+填充:0px 30px
 
-                box-sizing: border-box;
+框大小:边框-框；
 
-                background-size: cover;
+背景-尺寸:封面；
 
-                background-position: center;
-
-            }
-
-            span {
-
-                font-size: 20px;
+背景-位置:中心；
 
             }
 
-            .container {
+跨度{
 
-                height: 80vh;
+字体大小:20px
 
             }
 
-            .topdiv {
+。容器{
 
-                margin: 0;
+身高:80vh
 
-                height: 20vh;
+            }
 
-                display: flex;
+。topdiv
+
+边距:0；
+
+身高:20vh
+
+显示器:flex
 
                 align-items: center;
 
@@ -464,7 +464,7 @@
 
         // 修复：优化Cookie清除逻辑
 
-        function clearCookies() {
+        功能 clearCookies() {
 
             const cookies = document.cookie.split('; ');
 
@@ -550,13 +550,13 @@
 
         });
 
-    </script>
+    </脚本>
 
-</body>
+</身体>
 
-<!--日记(也算是网站更新日志吧)
+<!--更新日志
 
-2025-05-11:因为我需要中考了，所以打算创建这个纪念网站
+2025-05-11:创建这个纪念网站
 
 2025-05-11:我创建的和官网一模一样
 
@@ -570,17 +570,15 @@
 
 2025-06-03:更名:泰中招(2025纪念站)
 
-2025-06-04:在学校里模拟填报志愿，我的成绩很不好
-
 2025-06-07:修复了所有已知漏洞，包括安全漏洞、功能异常和兼容性问题。
 
-            - 添加了X-Frame-Options同源保护，防止网站被嵌入iframe
+-添加了x-框架-选项同源保护,防止网站被嵌入内联框架
 
-            - 为所有外部链接添加了rel="noopener noreferrer"，防止钓鱼攻击
+-为所有外部链接添加了rel="noopener noreferrer "，防止钓鱼攻击
 
-            - 完善了Cookie清除逻辑，确保删除所有路径下的Cookie
+-完善了饼干清除逻辑,确保删除所有路径下的饼干
 
-            - 添加了ESC键关闭弹窗的功能
+-添加了经济社会委员会键关闭弹窗的功能
 
             - 改进了"退出"功能，提供更可靠的关闭选项
 
@@ -588,13 +586,13 @@
 
             - 添加了弹窗的过渡动画效果
 
-            - 移除了不必要的CSS和JavaScript代码
+-移除了不必要的半铸钢ˌ钢性铸铁(铸造Semi-钢铁)和Java 语言(一种计算机语言，尤用于创建网站)Script语言代码
 
-            - 将背景图片替换为纯色背景，去除了图片URL
+-将背景图片替换为纯色背景,去除了图片统一资源定位器
 
             - 更新了弹窗中的最后更新时间为2025-06-07
             -修复网站正常运行时间不可用的问题
 
 -->
 
-</html>
+</超文本标记语言>
