--- a/index.html
+++ b/index.html
@@ -1,96 +1,38 @@
-<!文档类型html >
-
-< html lang="zh " >
-
-< head >
-
-< meta charset="utf-8 " >
-
-< meta name = " viewport " content = " width = device-width，initial-scale=1.0 " >
-
-<标题>中招2025年</title >
-
-< link rel = "样式表" href = "样式。CSS " >
-
-
-<!-- 百度统计 -->
-<脚本>
-var _ HMT = _ HMT[]；
-(函数(){
-var hm = document . createelement(" script ")；
-嗯src = "https://hm.baidu.com/hm.js？272119达E6 CCE 7 E3 ded 69 C4 a57 f 828d 1 "；
-var s = document . getelementsbytagname(" script ")[0]；
-s.parentNode.insertBefore(hm，s)；
-})();
-</script >
-
-<!-谷歌标签(gtag.js) ->
-< script async src = " https://www。谷歌标签管理器。com/gtag/js？id=G-N13ZH72VV9"></script >
-<脚本>
-窗户。数据层=窗口。数据层[]；
-函数gtag(){dataLayer.push(参数);}
-gtag('js '，new Date())；
-
-gtag('配置，‘G-n 13 zh 72v 9’)；
-</script >
-</head >
-
-< body onload="showModal()" >
-
-< div class="topdiv " >
-
-< span >中招2025年
-
-</div >
-
-< div class="container " >
-
-< span > < a href = " http://0.0.0.0 "通知公告< br > < br > nbsp
-
-< span > < a href = " http://00 .0 .0 " style = " color:蓝色；>毕业年级入口< br > < br > nbsp
-
-< span > < a href = " http://00 .0 .0 " style = " color:蓝色；>特长生准考证打印< br > < br > nbsp
-
-< span >非毕业年级暂未开放< br > < br > < span style = " font-size:14px；颜色:# 000；">温馨提示：此网站为一名2025中考生【暮雪】开发,现仅做纪念< br > < br > < span style = " font-size:14px。颜色:# 000；"id= "正常运行时间">网站正常运行时间:0天 0小时 0分钟 0秒< br > < br > < span style = " font-size:12px。颜色:# 666；”>原理：点击蓝色文字即可跳转至官方网站（通过超链接实现用户重定向至官方系统)</span></span >
-
-</div >
-
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>中招2025年</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body onload="showModal()">
+    <div class="topdiv">
+        <span>中招2025年</span>
+    </div>
+    <div class="container">
+        <span><a href="http://example.com/notice">通知公告</a><br><br></span>
+        <span><a href="http://example.com/senior" style="color: blue;">毕业年级入口</a><br><br></span>
+        <span><a href="http://example.com/special" style="color: blue;">特长生准考证打印</a><br><br></span>
+        <span>非毕业年级暂未开放<br><br><span style="font-size: 14px; color: #000;">温馨提示：此网站为一名2025中考生【暮雪】开发，现仅做纪念</span><br><br><span style="font-size: 14px; color: #000;" id="uptime">网站正常运行时间：0天 0小时 0分钟 0秒</span><br><br><span style="font-size: 12px; color: #666;">原理：点击蓝色文字即可跳转至官方网站（通过超链接实现用户重定向至官方系统）</span></span>
+    </div>
     <!-- 遮罩层 -->
-
-< div id = " overlay " class = " overlay " > </div >
-
+    <div id="overlay" class="overlay"></div>
     <!-- 弹窗内容 -->
-
-< div id="myModal" class="modal " >
-
-< div class="modal-content " >
-
-< span class = " close " onclick = " closeModal()" > & times;</span>
-
-< p >这个网站由◎黄昏雪)Persönliche Entwicklung，Nur zur Erinnerung und zur Demonstration der Open Source-Code-Basis</p>
-
-            
-< p >本网站已在开源代码库开源,搜索"中招2025",如果觉得这个项目比较好的话,麻烦点个Star,这对我很重要,谢谢</p >
-< p >请注意:由于网站的特殊性,所有链接点击,一切都将自动跳转。
-
-< p >上次更新编号:2025-06-15
-
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <p>这个网站由【暮雪】个人开发，仅作纪念用途，所有考试信息及报名入口均跳转至泰安市初中学业考试与高中段学校招生管理平台（www.taszk.com），本网站不存储或处理任何数据。</p>
+            <p>本网站仅提供导航服务和纪念，因官方链接变更或内容更新导致的误差，开发者不承担相关责任。</p>
+            <p>本网站不收集任何用户隐私信息，页面关闭时清除Cookie</p>
+            <p>最后更新：2025-06-07</p>
             <p>维护状态：正常</p>
-
-< div style = " text-align:center；">
-
-< button class = " modal-button " onclick = " lock page()" >退出</button >
-
-< button class = " modal-button " onclick = " dismissModal()" >我知道了</button >
-
-</div >
-
-</div >
-
-</div >
-
-< script src="script.js"></script >
-
-</body >
-
-</html >
+            <div style="text-align: center;">
+                <button class="modal-button" onclick="lockPage()">退出</button>
+                <button class="modal-button" onclick="dismissModal()">我知道了</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
