--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <p>这个网站由【暮雪】个人开发，仅作纪念用途，所有考试信息及报名入口均跳转至泰安市初中学业考试与高中段学校招生管理平台（www.taszk.com），本网站不存储或处理任何数据。</p>
-            <p>本网站仅提供导航服务和纪念，因官方链接变更或内容更新导致的误差，开发者不承担相关责任。</p>
+            <p>这个网站由【暮雪微晴】个人开发，仅作GitHub演示用途</p>
+            <p>本网站仅提供纪念</p>
             <p>本网站不收集任何用户隐私信息，页面关闭时清除Cookie</p>
-            <p>最后更新：2025-06-07</p>
+            <p>最后更新：2025-06-28</p>
             <p>维护状态：正常</p>
             <div style="text-align: center;">
                 <button class="modal-button" onclick="lockPage()">退出</button>
